<resources>
    <string name="app_name">Redeem</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_validate">Validate</string>
    <string name="title_activity_input">Input</string>
    <string name="title_activity_scan">Scan</string>

    <string name="title_fragment_auth">Authorization</string>

    <string name="message_title_notice">Notice</string>
    <string name="message_positive_ok">Ok</string>
    <string name="message_positive_yes">Yes</string>
    <string name="message_negative_no">No</string>
    <string name="message_login_invalid">Invalid username and password.</string>
    <string name="message_logout">Are you sure you want to logout?</string>
    <string name="message_event_remove">Are you sure you want to remove the selected event?</string>
    <string name="message_ticket_invalid">Ticket is not recognized. Please proceed to helpdesk
        .</string>
    <string name="message_cancel">Are you sure you want to discard the changes that has been
        made?</string>
    <string name="message_save">Are you sure you want to save the changes?</string>
    <string name="message_ticket_id_invalid">Invalid Ticket ID.</string>
    <string name="message_event_no_saved_list">Please contact your admin, there is no currently
        saved events.</string>
    <string name="message_connection_error">Unable to established connection to server.</string>
    <string name="message_connection_established">Connection Established.</string>
    <string name="message_event_refreshed">Event(s) has been refreshed.</string>
    <string name="message_event_has_saved">Selected event has already in the saved
        events list.</string>
    <string name="message_event_saved">Event(s) successfully saved.</string>

    <string name="concat_row_seat">%s / %s</string>

    <string name="text_login">Login</string>
    <string name="text_settings">Settings</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_scan_barcode">Scan Barcode</string>
    <string name="text_input_ticket_id">Input Ticket ID</string>
    <string name="text_logout">Logout</string>
    <string name="text_validate">Validate</string>
    <string name="text_result">Result</string>
    <string name="text_event_title">Event Title</string>
    <string name="text_event_date">Event Date and Time</string>
    <string name="text_event_exp">Event Expiration</string>
    <string name="text_ticket_id">Ticket ID</string>
    <string name="text_section">Section</string>
    <string name="text_row_seat">Row / Seat</string>
    <string name="text_transaction_date">Transaction Date</string>
    <string name="text_transaction_id">Transaction ID</string>
    <string name="text_ticket_type">Ticket Type</string>
    <string name="text_price">Price</string>
    <string name="text_branch">Branch</string>
    <string name="text_status">Status</string>
    <string name="text_used_date">Used Date</string>
    <string name="text_remark">Remarks</string>
    <string name="text_last_accessed">Last Accessed</string>
    <string name="text_scanned_result">Scanned Result</string>
    <string name="text_select_event">Select Event</string>
    <string name="text_saved_events">Saved Events</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_event_code">Event Code</string>
    <string name="text_customer_name">Customer Name</string>
    <string name="text_no_saved_events">No Saved Events Available</string>
    <string name="text_show_scanner">Show Scanner</string>
    <string name="text_slide_down">Slide Down</string>
    <string name="text_retry">Retry</string>
    <string name="text_ticket_type_sc_pwd">SC/PWD</string>
    <string name="text_seat_type_standing">Standing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_no_items">No Saved Items</string>
</resources>
