<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activities.MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="194dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/app_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_layout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_marginTop="120dp"
        android:layout_marginStart="@dimen/view_margin_hor"
        android:layout_marginEnd="@dimen/view_margin_hor"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/field_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_username"
            android:inputType="textPersonName"
            android:paddingBottom="@dimen/view_margin_ver"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_layout_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_layout_user"
        android:layout_marginTop="@dimen/view_margin_ver_s"
        android:layout_marginStart="@dimen/view_margin_hor"
        android:layout_marginEnd="@dimen/view_margin_hor"
        android:layout_gravity="center_horizontal"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/darker_gray"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/field_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/view_margin_ver"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/field_accent"
        android:layout_marginStart="@dimen/view_margin_hor"
        android:layout_marginEnd="@dimen/view_margin_hor"
        android:layout_marginBottom="@dimen/view_margin_ver"
        android:layout_below="@+id/field_layout_pass"
        android:text="@string/text_login"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/field_primary_border"
        android:layout_marginStart="@dimen/view_margin_hor"
        android:layout_marginEnd="@dimen/view_margin_hor"
        android:layout_marginBottom="@dimen/view_margin_hor"
        android:layout_below="@+id/btn_login"
        android:text="@string/text_settings"
        android:textColor="@color/colorAccent"/>
</RelativeLayout>